--- a/index.html
+++ b/index.html
@@ -1143,6 +1143,62 @@
     };
     </script>
     
+    <script id="mic-explicit-consent-guard">
+(function(){
+  // Default: microphone is NOT allowed until the user taps the mic button
+  window.__micExplicitConsent = false;
+
+  // Patch getUserMedia so any auto-attempts to grab audio fail without an explicit tap
+  try {
+    const md = navigator.mediaDevices;
+    if (md && md.getUserMedia) {
+      const origGUM = md.getUserMedia.bind(md);
+      md.getUserMedia = function(constraints){
+        try {
+          const wantsAudio = constraints && (constraints.audio !== false) && (typeof constraints.audio !== 'undefined');
+          if (wantsAudio && !window.__micExplicitConsent) {
+            return Promise.reject(new DOMException('Microphone blocked: explicit user gesture required', 'NotAllowedError'));
+          }
+        } catch(_){ /* noop */ }
+        return origGUM(constraints);
+      };
+    }
+  } catch(_){ /* noop */ }
+
+  // Patch Web Speech API start() so it won't run without a trusted tap
+  try {
+    const WSR = window.SpeechRecognition || window.webkitSpeechRecognition;
+    if (WSR && WSR.prototype && WSR.prototype.start) {
+      const origStart = WSR.prototype.start;
+      WSR.prototype.start = function(){
+        if (!window.__micExplicitConsent) {
+          console.warn('[KAIRA] SpeechRecognition.start blocked until mic button is pressed');
+          return; // silently ignore
+        }
+        return origStart.apply(this, arguments);
+      };
+    }
+  } catch(_){ /* noop */ }
+
+  // Global capture: only a **trusted** click on #mic-btn toggles consent ON
+  window.addEventListener('click', function(ev){
+    const t = ev.target;
+    if (!ev.isTrusted) return; // ignore synthetic clicks
+    if (!t) return;
+    const mic = (t.id === 'mic-btn') ? t : (t.closest ? t.closest('#mic-btn') : null);
+    if (mic) {
+      window.__micExplicitConsent = true;
+      console.log('[KAIRA] Microphone explicitly enabled by user.');
+    }
+  }, true);
+
+  // Helper API for view switching
+  window.KAIRA_MIC_GUARD = {
+    revoke(){ window.__micExplicitConsent = false; },
+    allow(){ window.__micExplicitConsent = true; }
+  };
+})();
+</script>
     <!-- DÜZELTME: Ana Kontrol Script'i en sona taşındı -->
     <script type="module">
         // --- GLOBAL KONTROL ---
@@ -1159,7 +1215,128 @@
         let demoInitialized = false;
         let editorInitialized = false;
         let chatInitialized = false; // Yeni
-        let afterlifeAnimationId, demoAnimationId;
+let afterlifeAnimationId, demoAnimationId;
+// --- Wake Lock (screen) support for long-running audio/LLM in DEMO ---
+let wakeLockSentinel = null;
+async function requestWakeLock(){
+  try {
+    if (!('wakeLock' in navigator)) { console.log('[WAKE] not supported'); return; }
+    if (wakeLockSentinel) return; // already held
+    wakeLockSentinel = await navigator.wakeLock.request('screen');
+    console.log('[WAKE] acquired');
+    wakeLockSentinel.addEventListener('release', () => {
+      console.log('[WAKE] released');
+      wakeLockSentinel = null;
+    });
+  } catch(err){
+    console.warn('[WAKE] request failed:', err && err.name ? err.name : err);
+  }
+}
+async function releaseWakeLock(){
+  try {
+    if (wakeLockSentinel) { await wakeLockSentinel.release(); }
+    wakeLockSentinel = null;
+  } catch(_){}
+}
+// Re-acquire when tab becomes visible again (some browsers auto-release)
+document.addEventListener('visibilitychange', () => {
+  if (document.visibilityState === 'visible' && activeView === 'demo') {
+    requestWakeLock();
+  }
+});
+window.addEventListener('pagehide', releaseWakeLock);
+window.addEventListener('beforeunload', releaseWakeLock);
+// --- DEMO view: network resilience & keep-alive ---
+const ORIG_FETCH = window.fetch.bind(window);
+let demoKeepAliveTimer = null;
+
+function startDemoKeepAlive(){
+  if (demoKeepAliveTimer) return;
+  const base = window.API_PROXY_BASE || '';
+  demoKeepAliveTimer = setInterval(async () => {
+    try {
+      await ORIG_FETCH(`${base}/api/get-groq-key`, {
+        headers: { 'ngrok-skip-browser-warning': 'true' },
+        cache: 'no-store',
+        mode: 'cors'
+      });
+    } catch(_) { /* sessiz */ }
+  }, 60000); // her 60 sn'de bir ping
+}
+function stopDemoKeepAlive(){ if (demoKeepAliveTimer){ clearInterval(demoKeepAliveTimer); demoKeepAliveTimer = null; } }
+
+function patchFetchForDemo(){
+  if (window.__fetchPatchedForDemo) return;
+  window.__origFetch = window.__origFetch || ORIG_FETCH;
+  window.fetch = async function(input, init={}){
+    // Opt-out flag → kullanılırsa patch devre dışı
+    if (init && init.kairaBypass === true) {
+      return window.__origFetch(input, init);
+    }
+
+    // Heuristics: TTS/stream çağrılarını otomatik uzun zaman aşımı ile koru
+    const hdr = new Headers(init?.headers || {});
+    const accept = (hdr.get('accept') || hdr.get('Accept') || '').toLowerCase();
+    const urlStr = (typeof input === 'string') ? input : (input && input.url ? String(input.url) : '');
+    const looksAudio = /audio\//i.test(accept) || /\b(\/tts|text-to-speech|\/audio)\b/i.test(urlStr);
+
+    const isLong = (init && (init.kairaLong === true || init.kairaIsStream === true)) || looksAudio;
+
+    const tries = (init && typeof init.kairaRetries === 'number')
+      ? init.kairaRetries
+      : (isLong ? 1 : 3);
+
+    const baseTimeout = (init && init.kairaTimeoutMs)
+      ? init.kairaTimeoutMs
+      : (isLong ? 180000 /* 180 sn */ : 15000);
+
+    for (let i = 0; i < Math.max(1, tries); i++){
+      const ac = new AbortController();
+      const t = setTimeout(() => ac.abort('timeout'), baseTimeout * (isLong ? 1 : Math.pow(1.5, i)));
+      try {
+        const res = await window.__origFetch(input, {
+          ...init,
+          signal: ac.signal,
+          cache: 'no-store',
+          headers: { ...(init?.headers||{}), 'ngrok-skip-browser-warning': 'true' }
+        });
+        clearTimeout(t);
+        return res; // çağıran taraf res.ok’a göre karar verir
+      } catch(err){
+        clearTimeout(t);
+        if (i < (tries - 1)){
+          await new Promise(r => setTimeout(r, 400 * Math.pow(2, i)));
+          continue;
+        }
+        // son deneme de başarısızsa sessiz 503 stub dön (demo UI patlamasın)
+        return new Response(JSON.stringify({ error: 'Network temporarily unavailable (auto-retried)' }), { status: 503, headers: { 'Content-Type': 'application/json' } });
+      }
+    }
+  };
+  window.__fetchPatchedForDemo = true;
+}
+function restoreFetchForDemo(){
+  if (window.__fetchPatchedForDemo && window.__origFetch){
+    window.fetch = window.__origFetch;
+    window.__fetchPatchedForDemo = false;
+  }
+}
+
+// DEMO görünümünde "Failed to fetch" benzeri hataları kullanıcıya göstermeden yut
+window.addEventListener('unhandledrejection', (e) => {
+  const msg = String(e?.reason?.message || e?.reason || '');
+  if (activeView === 'demo' && /(Failed to fetch|NetworkError|timeout|abort)/i.test(msg)) {
+    e.preventDefault();
+    console.warn('[KAIRA] Demo: network glitch suppressed →', msg);
+  }
+});
+window.addEventListener('error', (e) => {
+  const msg = String(e?.message || '');
+  if (activeView === 'demo' && /(Failed to fetch|NetworkError|timeout|abort)/i.test(msg)) {
+    e.preventDefault();
+    console.warn('[KAIRA] Demo: error suppressed →', msg);
+  }
+}, true);
         let nasaInitialized = false;
 
         // — Intro overlay bootstrap (shows button, closes on click/Enter) —
@@ -1231,12 +1408,33 @@
             if (demoAnimationId) cancelAnimationFrame(demoAnimationId);
 
             if (viewName === 'afterlife') {
+                // leaving demo → geri yükle & keep-alive durdur
+                restoreFetchForDemo();
+                stopDemoKeepAlive();
                 if (!afterlifeInitialized) initAfterlife();
                 animateAfterlife();
             } else if (viewName === 'demo') {
+                requestWakeLock();
+                patchFetchForDemo();
+                startDemoKeepAlive();
+                // Block any automatic microphone starts until user explicitly taps mic
+                if (window.KAIRA_MIC_GUARD && typeof window.KAIRA_MIC_GUARD.revoke === 'function') {
+                  window.KAIRA_MIC_GUARD.revoke();
+                }
                 if (!demoInitialized) initDemo();
                 animateDemo();
+                // Ensure the mic button grants consent on trusted taps
+                const mic = document.getElementById('mic-btn');
+                if (mic && !mic.dataset.kairaConsentBound) {
+                  mic.addEventListener('click', (e) => {
+                    if (e.isTrusted && window.KAIRA_MIC_GUARD) window.KAIRA_MIC_GUARD.allow();
+                  }, { capture: true });
+                  mic.dataset.kairaConsentBound = '1';
+                }
             } else if (viewName === 'editor') {
+                // leaving demo → geri yükle & keep-alive durdur
+                restoreFetchForDemo();
+                stopDemoKeepAlive();
                 // enable safe typing in editor: remove global blockers, open debug overrides
                 if (!document.documentElement.classList.contains('debug-open')){
                   document.documentElement.classList.add('debug-open');
@@ -1252,6 +1450,9 @@
                     editorInitialized = true;
                 }
             } else if (viewName === 'chat') {
+                // leaving demo → geri yükle & keep-alive durdur
+                restoreFetchForDemo();
+                stopDemoKeepAlive();
                 // enable safe typing/clicking in chat: remove global blockers, open debug overrides
                 if (!document.documentElement.classList.contains('debug-open')){
                   document.documentElement.classList.add('debug-open');
